<resources>
    <string name="app_name">UAV_Controller</string>
    <string name="enter_uav">Enter UAV</string>
    <string name="uav_apos_s_available_for_control">Please Enter UAV Information</string>
    <string name="center">Center</string>
    <string name="backward">Backward</string>
    <string name="left">Left</string>
    <string name="right">RIGHT</string>
    <string name="up">Up</string>
    <string name="down">DOWN</string>
    <string name="forward">Forward</string>
    <string name="for_lef">For/Lef</string>
    <string name="for_rig">For/Rig</string>
    <string name="bac_lef">BAC/LEF</string>
    <string name="bac_rig">Bac/rig</string>
    <string name="land">Land</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="control_uav">Control UAV</string>
    <string name="my_profile">My Profile</string>
    <string name="welcome">Welcome</string>
    <string name="login_message">Please Login or Register</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="remember_login">Remember Login</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="user_email">user_email</string>
    <string name="please_register_your_login_information">Please Register Your Login Information</string>
    <string name="new_account">New Account</string>
    <string name="_12_01_2000">12/01/2000</string>
    <string name="birthday">Birthday:</string>
    <string name="phone_optional">Phone # (optional)</string>
    <string name="news">News</string>
    <string name="here_is_where_you_would_see_news_if_we_had_some">The world is a VAMPIRE</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="logout">Logout</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="uav_id">UAV ID:</string>
    <string name="name">Name</string>
    <string name="uav_id_name">Enter the UAV ID Shown on the UAV</string>
    <string name="cmdToggleOn">Reading CMDs</string>
    <string name="cmdToggleOff">Not Reading</string>
    <string name="locToggleOn">Tracking UAV</string>
    <string name="locToggleOff">Not Tracking</string>
    <string name="title_activity_debug">DebugActivity</string>
    <string name="already_controlled_dialog_message">Unable to request control of the UAV, it is already controlled.</string>
    <string name="already_controlled_dialog_title">UAV Already Controlled</string>
    <string name="ok">OK</string>
    <string name="success">Success!</string>
    <string name="connection_success">Connection Successful!</string>
</resources>
