<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigate_control_activity"
        android:icon="@android:drawable/ic_menu_compass"
        android:orderInCategory="0"
        android:title="@string/control_uav"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigate_news_activity"
        android:icon="@android:drawable/star_on"
        android:orderInCategory="1"
        android:title="@string/news"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigate_profile_activity"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:orderInCategory="2"
        android:title="@string/my_profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigate_logout"
        android:icon="@android:drawable/ic_lock_power_off"
        android:orderInCategory="3"
        android:title="@string/logout"
        app:showAsAction="collapseActionView" />
</menu>