<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/registerScreen"
    tools:context=".register.RegisterActivity">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/new_account"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/please_register_your_login_information"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

    <EditText
        android:id="@+id/email_entry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/password_entry"
        app:layout_constraintStart_toEndOf="@+id/emailText"
        app:layout_constraintTop_toBottomOf="@+id/welcome_information" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:ems="10"
        android:gravity="center|end"
        android:importantForAutofill="no"
        android:selectAllOnFocus="false"
        android:text="@string/email"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/email_entry"
        app:layout_constraintEnd_toEndOf="@+id/passwordText"
        app:layout_constraintStart_toStartOf="@+id/passwordText"
        app:layout_constraintTop_toTopOf="@+id/email_entry"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:gravity="center|end"
        android:selectAllOnFocus="false"
        android:text="@string/password"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/password_entry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/password_entry" />

    <EditText
        android:id="@+id/password_entry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/passwordText"
        app:layout_constraintTop_toBottomOf="@+id/email_entry" />

    <EditText
        android:id="@+id/birthday_entry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/_12_01_2000"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/password_entry"
        app:layout_constraintStart_toStartOf="@+id/password_entry"
        app:layout_constraintTop_toBottomOf="@+id/password_entry"
        android:autofillHints="" />

    <EditText
        android:id="@+id/phone_entry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/_999_999_999"
        android:inputType="phone"
        android:tooltipText="A phone number can be used to help recover an account in the future."
        app:layout_constraintEnd_toEndOf="@+id/birthday_entry"
        app:layout_constraintStart_toStartOf="@+id/birthday_entry"
        app:layout_constraintTop_toBottomOf="@+id/birthday_entry"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|end"
        android:text="@string/birthday"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/birthday_entry"
        app:layout_constraintEnd_toEndOf="@+id/passwordText"
        app:layout_constraintStart_toStartOf="@+id/passwordText"
        app:layout_constraintTop_toTopOf="@+id/birthday_entry" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center|end"
        android:text="@string/phone_optional"
        android:textSize="18sp"
        android:tooltipText="A phone number can be used to help recover an account in the future."
        app:layout_constraintBottom_toBottomOf="@+id/phone_entry"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/phone_entry" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_entry" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>